Revise title and update webpage structure
Updated the title and styling of the MCCS webpage, modified content structure, and added new sections.

--- a/index.html
+++ b/index.html
@@ -2,157 +2,146 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <title>MCCS — Comportement Control Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MCCS — Service Officieusement Sérieux</title>
 
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
         body {
-            background: #000;
-            color: #fff;
+            margin: 0;
+            padding: 0;
+            background: #ffffff;
+            color: #111;
             font-family: Arial, Helvetica, sans-serif;
-            padding: 20px;
+            line-height: 1.6;
         }
 
-        h1 {
+        header {
+            border-bottom: 1px solid #ddd;
+            padding: 30px;
             text-align: center;
-            font-size: 3em;
-            margin-bottom: 30px;
+        }
+
+        header h1 {
+            margin: 0;
             letter-spacing: 2px;
+            font-size: 28px;
         }
 
-        .container {
-            max-width: 1200px;
+        header p {
+            margin-top: 10px;
+            font-size: 13px;
+            color: #555;
+        }
+
+        main {
+            max-width: 900px;
             margin: auto;
+            padding: 40px 20px;
         }
 
-        .section {
-            background: #111;
-            border: 1px solid #333;
+        section {
+            margin-bottom: 50px;
+        }
+
+        h2 {
+            font-size: 20px;
+            border-left: 4px solid #000;
+            padding-left: 10px;
+        }
+
+        ul {
+            margin-top: 15px;
+        }
+
+        footer {
+            border-top: 1px solid #ddd;
+            text-align: center;
             padding: 20px;
-            margin-bottom: 25px;
-        }
-
-        .section h2 {
-            margin-bottom: 15px;
-            border-bottom: 1px solid #333;
-            padding-bottom: 8px;
-        }
-
-        .badge {
-            display: inline-block;
-            background: #fff;
-            color: #000;
-            padding: 5px 10px;
-            font-size: 0.8em;
-            margin-bottom: 10px;
-        }
-
-        .rules li {
-            margin: 8px 0;
-        }
-
-        .gif-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-        }
-
-        .gif-grid img {
-            width: 100%;
-            border: 2px solid #222;
+            font-size: 12px;
+            color: #666;
         }
 
         .warning {
-            background: #1a1a1a;
-            border-left: 5px solid white;
-            padding: 15px;
-            font-weight: bold;
-        }
-
-        .footer {
-            text-align: center;
-            opacity: 0.5;
-            margin-top: 40px;
-            font-size: 0.9em;
-        }
-
-        button {
-            background: white;
-            color: black;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        button:hover {
-            background: #ccc;
+            border: 1px solid #000;
+            padding: 20px;
+            font-size: 14px;
         }
     </style>
 </head>
-
 <body>
-<div class="container">
 
+<header>
     <h1>MCCS</h1>
+    <p>Manager of Comportement Control Service</p>
+</header>
 
-    <div class="section">
-        <span class="badge">SEMI-SÉRIEUX</span>
-        <h2>📌 C’est quoi le MCCS ?</h2>
-        <p>
-            Le <strong>MCCS (Manager of Comportement Control Service)</strong> est un service
-            <em>officieusement officiel</em> dédié à l’observation, l’analyse et la dénonciation
-            (souvent déplacée) des comportements douteux sur Internet.
-            <br><br>
-            C’est sérieux.  
-            Mais c’est du troll.  
-            Mais c’est sérieux quand même.
-        </p>
-    </div>
+<main>
 
-    <div class="section">
-        <h2>📜 Règles fondamentales</h2>
-        <ul class="rules">
-            <li>Respecter le MCCS (même si personne ne sait comment)</li>
-            <li>Le troll est autorisé, l’acharnement non</li>
-            <li>Si ça dégénère → on arrête</li>
-            <li>Tout est faux jusqu’à preuve du contraire</li>
-            <li>Tout est vrai si c’est drôle</li>
-        </ul>
-    </div>
+<section>
+    <h2>Présentation</h2>
+    <p>
+        Le MCCS est une structure de gestion, d’observation et de régulation des comportements numériques jugés nuisibles,
+        incohérents ou socialement destructeurs.
+    </p>
+    <p>
+        Il ne se définit ni comme une autorité judiciaire, ni comme une institution étatique reconnue.
+        Il opère dans une zone volontairement floue entre analyse sociale, satire institutionnelle et contrôle symbolique.
+    </p>
+</section>
 
-    <div class="section warning">
-        ⚠️ AVERTISSEMENT  
-        <br>
-        Toute personne jugée « youtubeur poubelle » peut être signalée.
-        <br>
-        Aucune garantie de justice.  
-        Aucune garantie de logique.
-    </div>
+<section>
+    <h2>Missions</h2>
+    <ul>
+        <li>Identification de comportements problématiques sur les plateformes publiques</li>
+        <li>Analyse des discours et de leurs impacts sociaux</li>
+        <li>Classification interne des individus et entités</li>
+        <li>Application de mesures symboliques ou communautaires</li>
+        <li>Documentation et exposition structurée des dérives observées</li>
+    </ul>
+</section>
 
-    <div class="section">
-        <h2>💀 MEMES OFFICIELS MCCS</h2>
-        <div class="gif-grid">
-            <img src="https://media.tenor.com/mfsGxYT1EyMAAAAM/stan-twt-skeleton.gif" alt="skeleton">
-            <img src="https://media.tenor.com/4bXR4zB0uVkAAAAM/the-rock.gif" alt="rock">
-            <img src="https://media.tenor.com/sR2izduV7n8AAAAM/patrick-star-screaming.gif" alt="patrick">
-            <img src="https://media.tenor.com/8K6pKZcQJzAAAAAM/cat-staring.gif" alt="cat">
-        </div>
-    </div>
+<section>
+    <h2>Philosophie</h2>
+    <p>Tout comportement observable est évaluable.</p>
+    <p>Toute prise de parole est mesurable.</p>
+    <p>Toute influence implique une responsabilité.</p>
+    <p>
+        Le MCCS n’impose pas une vérité.
+        Il impose une lecture.
+    </p>
+</section>
 
-    <div class="section" style="text-align:center;">
-        <h2>🖱️ Action inutile</h2>
-        <button onclick="alert('Analyse en cours… résultat : RAAAGH')">
-            LANCER UNE ANALYSE MCCS
-        </button>
-    </div>
+<section>
+    <h2>Structure</h2>
+    <p>
+        Le MCCS fonctionne à travers plusieurs logistiques spécialisées :
+        collecte d’informations, gestion humaine, développement d’outils,
+        sécurisation, réponse aux infractions et supervision globale.
+    </p>
+    <p>
+        Le MCCSC supervise la notation sociale, les sanctions symboliques
+        et les décisions finales.
+    </p>
+</section>
 
-    <div class="footer">
-        MCCS © Service très sérieux mais pas trop • supervision > hiérarchie
-    </div>
+<section class="warning">
+    <strong>Avertissement</strong>
+    <p>
+        Toute interaction avec le MCCS implique l’acceptation implicite de ses règles internes,
+        qu’elles soient excessives, injustifiées ou absurdes.
+    </p>
+    <p>
+        Le MCCS observe.<br>
+        Le MCCS note.<br>
+        Le MCCS n’explique pas toujours.
+    </p>
+</section>
 
-</div>
+</main>
+
+<footer>
+    MCCS — Structure non officielle • Observation continue
+</footer>
+
 </body>
 </html>
