Revise styles and content for dark mode
Updated styles for dark mode and improved text contrast. Revised content for clarity and conciseness.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
         body {
             margin: 0;
             padding: 0;
-            background: #ffffff;
-            color: #111;
+            background: #000;
+            color: #fff;
             font-family: Arial, Helvetica, sans-serif;
             line-height: 1.6;
         }
 
+        /* Bande légale */
+        .legal-banner {
+            background: #fff;
+            color: #000;
+            text-align: center;
+            padding: 10px;
+            font-size: 13px;
+            border-bottom: 1px solid #ccc;
+        }
+
         header {
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid #333;
             padding: 30px;
             text-align: center;
         }
@@ -30,7 +40,7 @@
         header p {
             margin-top: 10px;
             font-size: 13px;
-            color: #555;
+            color: #aaa;
         }
 
         main {
@@ -45,7 +55,7 @@
 
         h2 {
             font-size: 20px;
-            border-left: 4px solid #000;
+            border-left: 4px solid #fff;
             padding-left: 10px;
         }
 
@@ -54,21 +64,26 @@
         }
 
         footer {
-            border-top: 1px solid #ddd;
+            border-top: 1px solid #333;
             text-align: center;
             padding: 20px;
             font-size: 12px;
-            color: #666;
+            color: #aaa;
         }
 
         .warning {
-            border: 1px solid #000;
+            border: 1px solid #fff;
             padding: 20px;
             font-size: 14px;
         }
     </style>
 </head>
 <body>
+
+<div class="legal-banner">
+    Projet semi-sérieux — mélange de satire, de troll assumé et d’analyse réelle.  
+    Ce site n’est pas une institution officielle.
+</div>
 
 <header>
     <h1>MCCS</h1>
@@ -85,28 +100,28 @@
     </p>
     <p>
         Il ne se définit ni comme une autorité judiciaire, ni comme une institution étatique reconnue.
-        Il opère dans une zone volontairement floue entre analyse sociale, satire institutionnelle et contrôle symbolique.
+        Il opère volontairement entre analyse sérieuse et mise en scène satirique.
     </p>
 </section>
 
 <section>
     <h2>Missions</h2>
     <ul>
-        <li>Identification de comportements problématiques sur les plateformes publiques</li>
-        <li>Analyse des discours et de leurs impacts sociaux</li>
-        <li>Classification interne des individus et entités</li>
-        <li>Application de mesures symboliques ou communautaires</li>
-        <li>Documentation et exposition structurée des dérives observées</li>
+        <li>Identifier les comportements problématiques sur les plateformes publiques</li>
+        <li>Analyser discours, attitudes et impacts sociaux</li>
+        <li>Classifier individus et entités selon des critères internes</li>
+        <li>Appliquer des mesures symboliques ou communautaires</li>
+        <li>Exposer les dérives de manière structurée</li>
     </ul>
 </section>
 
 <section>
     <h2>Philosophie</h2>
-    <p>Tout comportement observable est évaluable.</p>
+    <p>Tout comportement observé est évaluable.</p>
     <p>Toute prise de parole est mesurable.</p>
     <p>Toute influence implique une responsabilité.</p>
     <p>
-        Le MCCS n’impose pas une vérité.
+        Le MCCS ne prétend pas détenir la vérité.<br>
         Il impose une lecture.
     </p>
 </section>
@@ -114,21 +129,20 @@
 <section>
     <h2>Structure</h2>
     <p>
-        Le MCCS fonctionne à travers plusieurs logistiques spécialisées :
-        collecte d’informations, gestion humaine, développement d’outils,
-        sécurisation, réponse aux infractions et supervision globale.
+        Le MCCS fonctionne via plusieurs logistiques spécialisées :
+        renseignement, management, logic, sécurité, réponse et supervision.
     </p>
     <p>
-        Le MCCSC supervise la notation sociale, les sanctions symboliques
-        et les décisions finales.
+        Le MCCSC se situe au sommet, chargé de la notation sociale
+        et des décisions symboliques finales.
     </p>
 </section>
 
 <section class="warning">
     <strong>Avertissement</strong>
     <p>
-        Toute interaction avec le MCCS implique l’acceptation implicite de ses règles internes,
-        qu’elles soient excessives, injustifiées ou absurdes.
+        Toute interaction avec le MCCS implique l’acceptation implicite de règles internes
+        parfois excessives, parfois absurdes, mais assumées.
     </p>
     <p>
         Le MCCS observe.<br>
@@ -140,7 +154,7 @@
 </main>
 
 <footer>
-    MCCS — Structure non officielle • Observation continue
+    MCCS — Structure non officielle • Contrôle symbolique
 </footer>
 
 </body>
