--- a/index.html
+++ b/index.html
@@ -6,156 +6,460 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
-        body {
+        * {
             margin: 0;
             padding: 0;
-            background: #000;
-            color: #fff;
-            font-family: Arial, Helvetica, sans-serif;
-            line-height: 1.6;
+            box-sizing: border-box;
         }
 
-        /* Bande légale */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: #fff;
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%);
+            min-height: 100vh;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: 
+                radial-gradient(circle at 20% 50%, rgba(0, 123, 255, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(138, 43, 226, 0.1) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .container {
+            position: relative;
+            z-index: 1;
+        }
+
         .legal-banner {
-            background: #fff;
+            background: linear-gradient(90deg, #fff 0%, #f0f0f0 100%);
             color: #000;
             text-align: center;
-            padding: 10px;
+            padding: 12px 20px;
             font-size: 13px;
-            border-bottom: 1px solid #ccc;
+            border-bottom: 3px solid #007bff;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
         }
 
         header {
-            border-bottom: 1px solid #333;
-            padding: 30px;
+            padding: 60px 20px;
             text-align: center;
+            background: rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(10px);
+            border-bottom: 2px solid rgba(255, 255, 255, 0.1);
         }
 
         header h1 {
-            margin: 0;
-            letter-spacing: 2px;
-            font-size: 28px;
+            font-size: 48px;
+            letter-spacing: 8px;
+            margin-bottom: 10px;
+            background: linear-gradient(135deg, #fff 0%, #007bff 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-shadow: 0 0 30px rgba(0, 123, 255, 0.5);
         }
 
         header p {
-            margin-top: 10px;
-            font-size: 13px;
+            font-size: 16px;
             color: #aaa;
+            letter-spacing: 2px;
         }
 
         main {
-            max-width: 900px;
-            margin: auto;
-            padding: 40px 20px;
+            max-width: 1000px;
+            margin: 60px auto;
+            padding: 0 20px;
+        }
+
+        .join-section {
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(15px);
+            border: 2px solid rgba(0, 123, 255, 0.3);
+            border-radius: 15px;
+            padding: 40px;
+            margin-bottom: 50px;
+            text-align: center;
+            box-shadow: 0 8px 32px rgba(0, 123, 255, 0.2);
+        }
+
+        .join-btn {
+            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            color: #fff;
+            border: none;
+            padding: 18px 50px;
+            font-size: 18px;
+            font-weight: bold;
+            letter-spacing: 2px;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 5px 20px rgba(0, 123, 255, 0.4);
+            text-transform: uppercase;
+        }
+
+        .join-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 30px rgba(0, 123, 255, 0.6);
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(5px);
+        }
+
+        .modal-content {
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+            margin: 10% auto;
+            padding: 40px;
+            border: 2px solid rgba(0, 123, 255, 0.5);
+            border-radius: 20px;
+            width: 90%;
+            max-width: 500px;
+            box-shadow: 0 10px 50px rgba(0, 123, 255, 0.3);
+            animation: slideDown 0.3s ease;
+        }
+
+        @keyframes slideDown {
+            from {
+                transform: translateY(-50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 32px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: color 0.3s;
+        }
+
+        .close:hover {
+            color: #fff;
+        }
+
+        .modal h2 {
+            text-align: center;
+            margin-bottom: 30px;
+            color: #007bff;
+        }
+
+        .input-group {
+            margin-bottom: 25px;
+        }
+
+        .input-group label {
+            display: block;
+            margin-bottom: 10px;
+            color: #aaa;
+            font-size: 14px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .input-group input {
+            width: 100%;
+            padding: 15px;
+            background: rgba(255, 255, 255, 0.05);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            color: #fff;
+            font-size: 16px;
+            transition: all 0.3s;
+        }
+
+        .input-group input:focus {
+            outline: none;
+            border-color: #007bff;
+            background: rgba(255, 255, 255, 0.08);
+        }
+
+        .submit-btn {
+            width: 100%;
+            padding: 15px;
+            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            border: none;
+            border-radius: 10px;
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        .submit-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 20px rgba(0, 123, 255, 0.5);
+        }
+
+        .error-msg {
+            color: #ff4444;
+            text-align: center;
+            margin-top: 15px;
+            display: none;
+        }
+
+        .success-msg {
+            background: rgba(0, 255, 0, 0.1);
+            border: 2px solid rgba(0, 255, 0, 0.3);
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            display: none;
+            margin-top: 20px;
+        }
+
+        .success-code {
+            font-size: 24px;
+            font-weight: bold;
+            color: #00ff00;
+            letter-spacing: 3px;
+            margin: 15px 0;
+            font-family: 'Courier New', monospace;
         }
 
         section {
-            margin-bottom: 50px;
+            background: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            padding: 40px;
+            margin-bottom: 40px;
+            transition: all 0.3s;
+        }
+
+        section:hover {
+            border-color: rgba(0, 123, 255, 0.5);
+            box-shadow: 0 5px 25px rgba(0, 123, 255, 0.2);
         }
 
         h2 {
-            font-size: 20px;
-            border-left: 4px solid #fff;
-            padding-left: 10px;
+            font-size: 28px;
+            margin-bottom: 20px;
+            color: #007bff;
+            border-left: 5px solid #007bff;
+            padding-left: 15px;
         }
 
         ul {
             margin-top: 15px;
+            padding-left: 20px;
         }
 
-        footer {
-            border-top: 1px solid #333;
-            text-align: center;
-            padding: 20px;
-            font-size: 12px;
-            color: #aaa;
+        li {
+            margin-bottom: 10px;
+            color: #ccc;
         }
 
         .warning {
-            border: 1px solid #fff;
-            padding: 20px;
-            font-size: 14px;
+            border: 2px solid #ff4444;
+            background: rgba(255, 68, 68, 0.1);
+            padding: 30px;
+            border-radius: 15px;
+        }
+
+        .warning strong {
+            color: #ff4444;
+            font-size: 20px;
+            display: block;
+            margin-bottom: 15px;
+        }
+
+        footer {
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(10px);
+            border-top: 2px solid rgba(255, 255, 255, 0.1);
+            text-align: center;
+            padding: 30px 20px;
+            font-size: 13px;
+            color: #777;
+            margin-top: 60px;
         }
     </style>
 </head>
 <body>
 
-<div class="legal-banner">
-    Projet semi-sérieux — mélange de satire, de troll assumé et d’analyse réelle.  
-    Ce site n’est pas une institution officielle.
+<div class="container">
+    <div class="legal-banner">
+        Projet semi-sérieux — mélange de satire, de troll assumé et d'analyse réelle.  
+        Ce site n'est pas une institution officielle.
+    </div>
+
+    <header>
+        <h1>MCCS</h1>
+        <p>Manager of Comportement Control Service</p>
+    </header>
+
+    <main>
+        <div class="join-section">
+            <h2 style="border: none; padding: 0; margin-bottom: 20px;">Rejoindre le MCCS</h2>
+            <p style="margin-bottom: 30px; color: #aaa;">Accès réservé aux membres possédant un code d'autorisation valide</p>
+            <button class="join-btn" onclick="openModal()">REJOINDRE MCCS</button>
+        </div>
+
+        <section>
+            <h2>Présentation</h2>
+            <p>
+                Le MCCS est une structure de gestion, d'observation et de régulation des comportements numériques jugés nuisibles,
+                incohérents ou socialement destructeurs.
+            </p>
+            <p style="margin-top: 15px;">
+                Il ne se définit ni comme une autorité judiciaire, ni comme une institution étatique reconnue.
+                Il opère volontairement entre analyse sérieuse et mise en scène satirique.
+            </p>
+        </section>
+
+        <section>
+            <h2>Missions</h2>
+            <ul>
+                <li>Identifier les comportements problématiques sur les plateformes publiques</li>
+                <li>Analyser discours, attitudes et impacts sociaux</li>
+                <li>Classifier individus et entités selon des critères internes</li>
+                <li>Appliquer des mesures symboliques ou communautaires</li>
+                <li>Exposer les dérives de manière structurée</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Philosophie</h2>
+            <p>Tout comportement observé est évaluable.</p>
+            <p>Toute prise de parole est mesurable.</p>
+            <p>Toute influence implique une responsabilité.</p>
+            <p style="margin-top: 15px;">
+                Le MCCS ne prétend pas détenir la vérité.<br>
+                Il impose une lecture.
+            </p>
+        </section>
+
+        <section>
+            <h2>Structure</h2>
+            <p>
+                Le MCCS fonctionne via plusieurs logistiques spécialisées :
+                renseignement, management, logic, sécurité, réponse et supervision.
+            </p>
+            <p style="margin-top: 15px;">
+                Le MCCSC se situe au sommet, chargé de la notation sociale
+                et des décisions symboliques finales.
+            </p>
+        </section>
+
+        <section class="warning">
+            <strong>Avertissement</strong>
+            <p style="margin-top: 15px;">
+                Toute interaction avec le MCCS implique l'acceptation implicite de règles internes
+                parfois excessives, parfois absurdes, mais assumées.
+            </p>
+            <p style="margin-top: 15px;">
+                Le MCCS observe.<br>
+                Le MCCS note.<br>
+                Le MCCS n'explique pas toujours.
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        MCCS — Structure non officielle • Contrôle symbolique<br>
+        © 2025 - Tous droits réservés
+    </footer>
 </div>
 
-<header>
-    <h1>MCCS</h1>
-    <p>Manager of Comportement Control Service</p>
-</header>
+<!-- Modal -->
+<div id="joinModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2>Code d'Accès Requis</h2>
+        <div class="input-group">
+            <label for="accessCode">Entrez votre code d'autorisation</label>
+            <input type="text" id="accessCode" placeholder="XXXXXXXXX" maxlength="20">
+        </div>
+        <button class="submit-btn" onclick="verifyCode()">VÉRIFIER</button>
+        <p class="error-msg" id="errorMsg">Code invalide. Accès refusé.</p>
+        <div class="success-msg" id="successMsg">
+            <p>✓ Accès autorisé</p>
+            <p style="margin-top: 10px; color: #aaa;">Votre code serveur :</p>
+            <div class="success-code" id="serverCode"></div>
+            <p style="margin-top: 10px; font-size: 12px; color: #888;">Conservez ce code précieusement</p>
+        </div>
+    </div>
+</div>
 
-<main>
+<script>
+    const validCodes = ['X3v5bop9V0', '2123bn6vd77klpd', 'vbu7nedgt9n43'];
 
-<section>
-    <h2>Présentation</h2>
-    <p>
-        Le MCCS est une structure de gestion, d’observation et de régulation des comportements numériques jugés nuisibles,
-        incohérents ou socialement destructeurs.
-    </p>
-    <p>
-        Il ne se définit ni comme une autorité judiciaire, ni comme une institution étatique reconnue.
-        Il opère volontairement entre analyse sérieuse et mise en scène satirique.
-    </p>
-</section>
+    function openModal() {
+        document.getElementById('joinModal').style.display = 'block';
+    }
 
-<section>
-    <h2>Missions</h2>
-    <ul>
-        <li>Identifier les comportements problématiques sur les plateformes publiques</li>
-        <li>Analyser discours, attitudes et impacts sociaux</li>
-        <li>Classifier individus et entités selon des critères internes</li>
-        <li>Appliquer des mesures symboliques ou communautaires</li>
-        <li>Exposer les dérives de manière structurée</li>
-    </ul>
-</section>
+    function closeModal() {
+        document.getElementById('joinModal').style.display = 'none';
+        document.getElementById('accessCode').value = '';
+        document.getElementById('errorMsg').style.display = 'none';
+        document.getElementById('successMsg').style.display = 'none';
+    }
 
-<section>
-    <h2>Philosophie</h2>
-    <p>Tout comportement observé est évaluable.</p>
-    <p>Toute prise de parole est mesurable.</p>
-    <p>Toute influence implique une responsabilité.</p>
-    <p>
-        Le MCCS ne prétend pas détenir la vérité.<br>
-        Il impose une lecture.
-    </p>
-</section>
+    function generateServerCode() {
+        const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+        let code = '';
+        for (let i = 0; i < 12; i++) {
+            code += chars.charAt(Math.floor(Math.random() * chars.length));
+        }
+        return code;
+    }
 
-<section>
-    <h2>Structure</h2>
-    <p>
-        Le MCCS fonctionne via plusieurs logistiques spécialisées :
-        renseignement, management, logic, sécurité, réponse et supervision.
-    </p>
-    <p>
-        Le MCCSC se situe au sommet, chargé de la notation sociale
-        et des décisions symboliques finales.
-    </p>
-</section>
+    function verifyCode() {
+        const input = document.getElementById('accessCode').value.trim();
+        const errorMsg = document.getElementById('errorMsg');
+        const successMsg = document.getElementById('successMsg');
+        
+        if (validCodes.includes(input)) {
+            errorMsg.style.display = 'none';
+            const serverCode = generateServerCode();
+            document.getElementById('serverCode').textContent = serverCode;
+            successMsg.style.display = 'block';
+        } else {
+            errorMsg.style.display = 'block';
+            successMsg.style.display = 'none';
+        }
+    }
 
-<section class="warning">
-    <strong>Avertissement</strong>
-    <p>
-        Toute interaction avec le MCCS implique l’acceptation implicite de règles internes
-        parfois excessives, parfois absurdes, mais assumées.
-    </p>
-    <p>
-        Le MCCS observe.<br>
-        Le MCCS note.<br>
-        Le MCCS n’explique pas toujours.
-    </p>
-</section>
+    window.onclick = function(event) {
+        const modal = document.getElementById('joinModal');
+        if (event.target == modal) {
+            closeModal();
+        }
+    }
 
-</main>
-
-<footer>
-    MCCS — Structure non officielle • Contrôle symbolique
-</footer>
+    document.getElementById('accessCode').addEventListener('keypress', function(e) {
+        if (e.key === 'Enter') {
+            verifyCode();
+        }
+    });
+</script>
 
 </body>
 </html>
